--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     build: .
     environment:
       MYAPP_DATABASE_HOST: db
+      MYAPP_CACHE_HOST: cache
       MYAPP_WEB_PORT: 8080
     depends_on:
       db:
+        condition: service_healthy
+      cache:
         condition: service_healthy
     ports:
       - 3000:8080
@@ -16,3 +19,5 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: myapp
+  cache:
+    image: healthcheck/redis:alpine
